Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete.mdx
+++ b/api-reference/endpoint/delete.mdx
@@ -1,4 +1,24 @@
 ---
-title: 'Delete Plant'
-openapi: 'DELETE /plants/{id}'
+title: "Delete Plant"
+openapi: "DELETE /plants/{id}"
 ---
+
+<Accordion title="New Accordion" icon="sparkles">
+  
+</Accordion>
+
+<RequestExample>
+
+``` filename
+// add code here
+```
+
+</RequestExample>
+
+<ResponseExample>
+
+``` filename
+// add code here
+```
+
+</ResponseExample>
